cicdapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicdapp-deployment
  namespace: mynamespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicdapp
  template:
    metadata:
      labels:
        app: cicdapp
    spec:
      containers:
      - name: cicdapp-container
        image: aleksandra1dd/cicdapp:latest
        ports:
        - containerPort: 8000
