stateful-set-cicdapp-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mynamespace
spec:
  serviceName: mongodb
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo:4.4
        command:
          - "mongod"
          - "--bind_ip_all"
          - "--replSet"
          - "rs0"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        readinessProbe:
          exec:
            command:
            - "mongo"
            - "--eval"
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - "mongo"
            - "--eval"
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          timeoutSeconds: 5
  volumeClaimTemplates:
      - metadata:
          name: mongo-data
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 1Gi
