cicdapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicdapp-service
  namespace: mynamespace
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: cicdapp
